--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Calculator</title>
-    <link rel="stylesheet" href="style.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Properties Calculator</title>
   </head>
   <body>
     <main>
       <header>
-        <h1>Circle Properties Calculator</h1>
+        <h1>Calculate : <span class="typing"></span></h1>
       </header>
 
       <section class="user-input">
