solve minor bugs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="number" id="input-btn" />
 
         <a href="#" id="area-btn" class="btn">For Area!</a>
-        <a href="#" id="vol-btn" class="btn">Fro Volume!</a>
+        <a href="#" id="vol-btn" class="btn">For Volume!</a>
       </section>
 
       <h1 class="formula">Formula = <span id="text-result"></span></h1>
